RESOLVED FIXED 202603
ServiceWorkerContainer should never prevent a page from entering the back/forward cache
https://bugs.webkit.org/show_bug.cgi?id=202603
Summary ServiceWorkerContainer should never prevent a page from entering the back/for...
Chris Dumez
Reported 2019-10-04 14:16:55 PDT
ServiceWorkerContainer should never prevent a page from entering the back/forward cache.
Attachments
Patch (14.03 KB, patch)
2019-10-04 15:06 PDT, Chris Dumez
no flags
Patch (14.96 KB, patch)
2019-10-04 16:00 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-10-04 15:06:46 PDT
Geoffrey Garen
Comment 2 2019-10-04 15:18:38 PDT
Comment on attachment 380258 [details] Patch r=me
Chris Dumez
Comment 3 2019-10-04 16:00:31 PDT
WebKit Commit Bot
Comment 4 2019-10-04 17:40:12 PDT
Comment on attachment 380262 [details] Patch Clearing flags on attachment: 380262 Committed r250758: <https://trac.webkit.org/changeset/250758>
WebKit Commit Bot
Comment 5 2019-10-04 17:40:13 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-10-04 17:41:15 PDT
Note You need to log in before you can comment on or make changes to this bug.