ServiceWorkerContainer should never prevent a page from entering the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=202603

Reviewed by Geoff Garen.

Source/WebCore:

Make it so that ServiceWorkerContainer can suspend, even if they have pending promises.
We now queue all promise resolutions to a SuspendableTaskQueue to make sure that those
promises do not get resolved while in the page cache.

Test: http/tests/workers/service/page-cache-service-worker-pending-promise.https.html

* workers/service/ServiceWorkerContainer.cpp:
(WebCore::ServiceWorkerContainer::ServiceWorkerContainer):
(WebCore::ServiceWorkerContainer::ready):
(WebCore::ServiceWorkerContainer::getRegistration):
(WebCore::ServiceWorkerContainer::getRegistrations):
(WebCore::ServiceWorkerContainer::jobFailedWithException):
(WebCore::ServiceWorkerContainer::jobResolvedWithRegistration):
(WebCore::ServiceWorkerContainer::jobResolvedWithUnregistrationResult):
(WebCore::ServiceWorkerContainer::jobFailedLoadingScript):
(WebCore::ServiceWorkerContainer::canSuspendForDocumentSuspension const):
* workers/service/ServiceWorkerContainer.h:

LayoutTests:

Add layout test coverage.

* http/tests/workers/service/page-cache-service-worker-pending-promise.https-expected.txt: Added.
* http/tests/workers/service/page-cache-service-worker-pending-promise.https.html: Added.


Canonical link: https://commits.webkit.org/216088@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250758 268f45cc-cd09-0410-ab3c-d52691b4dbfc